[gd_scene load_steps=5 format=2]

[ext_resource path="res://Examples/Paddle/Assets/Themes/Heading.tres" type="DynamicFont" id=1]
[ext_resource path="res://Examples/Paddle/Assets/Themes/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Examples/Paddle/Components/Menus/Button/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Examples/Paddle/Components/Menus/JoinMenu/JoinMenu.gd" type="Script" id=4]

[node name="JoinMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.12549, 0.12549, 0.12549, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 384.0
margin_top = 172.0
margin_right = 640.0
margin_bottom = 428.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
margin_left = 72.0
margin_top = 16.0
margin_right = 184.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "JOIN GAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Panel"]
margin_left = 24.0
margin_top = 64.0
margin_right = 67.0
margin_bottom = 88.0
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="Panel"]
margin_left = 92.0
margin_top = 60.0
margin_right = 236.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostLabel" type="Label" parent="Panel"]
margin_left = 24.0
margin_top = 96.0
margin_right = 58.0
margin_bottom = 120.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostInput" type="LineEdit" parent="Panel"]
margin_left = 92.0
margin_top = 92.0
margin_right = 236.0
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortLabel" type="Label" parent="Panel"]
margin_left = 24.0
margin_top = 128.0
margin_right = 58.0
margin_bottom = 152.0
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortInput" type="LineEdit" parent="Panel"]
margin_left = 156.0
margin_top = 124.0
margin_right = 236.0
margin_bottom = 151.0
max_length = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="Label" parent="Panel"]
margin_left = 24.0
margin_top = 160.0
margin_right = 121.0
margin_bottom = 184.0
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="Panel"]
margin_left = 124.0
margin_top = 156.0
margin_right = 236.0
margin_bottom = 183.0
placeholder_text = "(none)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" parent="Panel" instance=ExtResource( 3 )]
margin_left = 196.0
margin_top = 216.0
margin_right = 236.0
margin_bottom = 242.0
text = "JOIN"

[node name="BackButton" parent="Panel" instance=ExtResource( 3 )]
margin_left = 24.0
margin_top = 216.0
margin_right = 56.0
margin_bottom = 242.0
text = "BACK"

[node name="ErrorMessage" type="Label" parent="Panel"]
visible = false
margin_top = 264.0
margin_right = 256.0
margin_bottom = 288.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.313726, 0, 0, 1 )
text = "Error message"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
